monticore-grammar/src/test/resources/de/monticore/javalight/cocos/invalid/A0813/A0813.java
public int method(int[] ... x) {}